--- a/nike/Nike.html
+++ b/nike/Nike.html
@@ -24,15 +24,99 @@
 	background-color: white;
 	box-shadow: 10px 10px 5px black;
 	border-radius: 15px;
-	margin-bottom:8px;
+	margin-bottom:28px;
 	}
-	#nikesvg{
-	color:black;
+	.sredinatop{
+	margin-left:45%;
 	}
 	#naslov{
 	text-align:center;
 	color:black;
 	}
+	#searchbar{
+	height: 35px;
+	width: 200px;
+	border-radius: 18px;
+	border: none;
+	font-family: "Playfair Display";
+	background-color: #f0f0f0;
+	margin-left: 25%;
+	margin-top: 4px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: black;
+	font-size: 14px;
+	background-image: url(slike/search.png);
+	background-repeat: no-repeat;
+	background-size: 20px 20px;
+	background-position: 90% 40%;
+	}
+	.socialicons{
+	margin-top:10px;
+    margin-left:80%;
+    text-align: center;
+}
+.footer{
+    float:left;
+	margin-left:20%;
+	margin-top:0;
+	
+}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  height:800px;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  font-family: "Playfair Display";
+  color: #000000;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  font-family: "Playfair Display";
+  color: black;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
 	</style>
 </head>
 <body>
@@ -40,18 +124,47 @@
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home" class="w3-bar-item w3-button"><img src="slike/Nike-logo.png"  width="50" height="30"></a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
+    <!-- Middle-sided navbar links. Hide them on small screens -->
+    <div class="sredinatop">
       <a href="#about" class="w3-bar-item w3-button">JPG</a>
       <a href="#menu" class="w3-bar-item w3-button">Beizer</a>
       <a href="#contact" class="w3-bar-item w3-button">SVG</a>
     </div>
+	<!-- Right-sided navbar links. Hide them on small screens -->
+	<input type="text" placeholder="   Išči na strani" id="searchbar" maxlength="20">
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="logo_header" src="slike/Nike-logo.png"  width="1200" height="700">
+  <div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="slike/soln1.jpg"  height="800px" style="width:100%" "height:800px">
+  <div class="text">Air Jordan 1</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="slike/soln2.webp" height="800px" style="width:100%" "height:800px">
+  <div class="text">Nike Cosmics</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="slike/soln3.jpg" height="800px" style="width:100%">
+  <div class="text">Nike Air Yeezy 2</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
 
   </div>
@@ -98,7 +211,7 @@ Podjetje sta 25. januarja 1964 kot "Blue Ribbon Sports" ustanovila Bill Bowerman
     
     <div class="w3-col l6 w3-padding-large">
       <canvas id="myCanvas" width="490" height="200"
-          style="border: 1px solid rgb(255, 255, 255); margin-top: 8%;"></canvas>
+          style="border: 1px solid rgb(255, 255, 255); margin-top: 30%;"></canvas>
         <script>
           var canvas = document.getElementById('myCanvas');
           var context = canvas.getContext('2d');
@@ -125,18 +238,19 @@ Podjetje sta 25. januarja 1964 kot "Blue Ribbon Sports" ustanovila Bill Bowerman
   <!-- Contact Section -->
   <div class="w3-row w3-padding-64" id="contact">
     <div class="w3-col m6 w3-padding-large ">
-	<svg xmlns="http://www.w3.org/2000/svg"
-    width="560" height="520"
-     viewBox="0 0 1198 980">
-  <path id="nikesvg"
-        fill="black" stroke="black" stroke-width="1"
-        d="M 312.36,681.27
-           C 275.03,696.61 208.00,694.67 204.67,694.00
-             -22.67,642.67 235.33,352.00 238.00,352.00
-             147.33,574.67 348.00,539.33 348.00,539.33
-             348.00,539.33 1129.00,327.00 1129.00,327.00
-             1129.00,327.00 312.50,681.50 312.50,681.50" />
-</svg>
+<svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="580px" style="margin-left: 10%; margin-top: 8%;"
+          viewBox="0 0 1200.000000 427.000000" preserveAspectRatio="xMidYMid meet">
+          <g transform="translate(0.000000,427.000000) scale(0.080000,-0.080000)" fill="#000000" stroke="none">
+            <path d="M1519 4043 c-740 -821 -1092 -1322 -1319 -1874 -138 -337 -200 -615
+              -200 -909 0 -387 104 -646 361 -898 185 -181 415 -293 706 -342 148 -26 530
+              -28 710 -5 387 50 834 176 1313 370 217 88 292 119 2935 1250 930 398 2079
+              889 2555 1093 476 203 1425 609 2110 902 685 293 1260 539 1279 547 18 8 31
+              16 28 19 -2 3 -267 -65 -588 -150 -321 -85 -865 -230 -1209 -321 -1089 -289
+              -3167 -842 -3650 -970 -256 -68 -829 -220 -1275 -339 -2215 -588 -2164 -575
+              -2436 -613 -174 -24 -507 -23 -644 1 -251 45 -432 130 -590 277 -408 382 -431
+              1021 -64 1811 46 98 147 289 196 371 2 4 0 7 -5 7 -4 0 -101 -102 -213 -227z" />
+          </g>
+        </svg>
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -155,8 +269,40 @@ Podjetje sta 25. januarja 1964 kot "Blue Ribbon Sports" ustanovila Bill Bowerman
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Powered by <a href="https://www.nike.com/si/" title="nike" target="_blank" class="w3-hover-text-green">Nike.si</a></p>
+ <div class="footer"><p>Powered by <a href="https://www.nike.com/si/" title="nike" target="_blank" class="w3-hover-text-gray">Nike.si</a></p></div>
+							<div class="socialicons">
+                                <a href="https://www.instagram.com/nike" target="_blank" class="povezava">
+                                <img src="slike/instagram.png" width="30" height="30">
+                                </a>
+                                <a href="https://www.facebook.com/nike" target="_blank" class="povezava">
+                                <img src="slike/facebook.png" width="30" height="30">
+                                </a>
+                                <a href="https://twitter.com/Nike" target="_blank" class="povezava">
+                                <img src="slike/twitter.png" width="30" height="30">
+                                </a>
+                            </div>
 </footer>
 
+<script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 4000); // Change image every 4 seconds
+}
+</script>
 </body>
 </html>
