--- a/nike/Nike.html
+++ b/nike/Nike.html
@@ -22,7 +22,7 @@
 	}
 	#sredina{
 	background-color: white;
-	box-shadow: 10px 10px 5px black;
+	box-shadow: 10px 10px 5px gray;
 	border-radius: 15px;
 	margin-bottom:28px;
 	}
@@ -64,10 +64,12 @@
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 1100px;
   position: relative;
-  height:800px;
+  height:900px;
   margin: auto;
+  margin-top: 80px;
+  
 }
 
 /* Caption text */
@@ -117,6 +119,13 @@
   from {opacity: .4} 
   to {opacity: 1}
 }
+a {
+  text-decoration: none;
+}
+img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
 	</style>
 </head>
 <body>
@@ -141,19 +150,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="slike/soln1.jpg"  height="800px" style="width:100%" "height:800px">
+  <img src="slike/soln1.jpg"  height="900px" style="width:100%" "height:800px">
   <div class="text">Air Jordan 1</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="slike/soln2.webp" height="800px" style="width:100%" "height:800px">
+  <img src="slike/soln2.webp" height="900px" style="width:100%" "height:800px">
   <div class="text">Nike Cosmics</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="slike/soln3.jpg" height="800px" style="width:100%">
+  <img src="slike/soln3.jpg" height="900px" style="width:100%">
   <div class="text">Nike Air Yeezy 2</div>
 </div>
 
