--- a/nike/Nike.html
+++ b/nike/Nike.html
@@ -5,128 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">	
+<link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/png" href="slike/nike.jpg">
-	<style>
-	body {
-	font-family: "Times New Roman", Georgia, Serif; background-color:#E0E0E0
-	}
-	h1, h2, h3, h4, h5, h6 {
-	  font-family: "Playfair Display";
-	  letter-spacing: 5px;
-	}
-	.logo_header{
-	 margin:100px 260px;
-	}
-	.jpg{
-	margin-left:0px;
-	}
-	#sredina{
-	background-color: white;
-	box-shadow: 10px 10px 5px gray;
-	border-radius: 15px;
-	margin-bottom:28px;
-	}
-	.sredinatop{
-	margin-left:45%;
-	}
-	#naslov{
-	text-align:center;
-	color:black;
-	}
-	#searchbar{
-	height: 35px;
-	width: 200px;
-	border-radius: 18px;
-	border: none;
-	font-family: "Playfair Display";
-	background-color: #f0f0f0;
-	margin-left: 25%;
-	margin-top: 4px;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 600;
-	color: black;
-	font-size: 14px;
-	background-image: url(slike/search.png);
-	background-repeat: no-repeat;
-	background-size: 20px 20px;
-	background-position: 90% 40%;
-	}
-	.socialicons{
-	margin-top:10px;
-    margin-left:80%;
-    text-align: center;
-}
-.footer{
-    float:left;
-	margin-left:20%;
-	margin-top:0;
-	
-}
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1100px;
-  position: relative;
-  height:900px;
-  margin: auto;
-  margin-top: 80px;
-  
-}
 
-/* Caption text */
-.text {
-  font-family: "Playfair Display";
-  color: #000000;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
 
-/* Number text (1/3 etc) */
-.numbertext {
-  font-family: "Playfair Display";
-  color: black;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 3s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-a {
-  text-decoration: none;
-}
-img {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-}
-	</style>
 </head>
 <body>
 <!-- Navbar (sit on top) -->
@@ -145,24 +27,24 @@ img {
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+<header style="width:100%" id="home">
   <div class="slideshow-container">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="slike/soln1.jpg"  height="900px" style="width:100%" "height:800px">
+  <img src="slike/soln1.jpg" height="800px" style="width:100%"><!--class="cover"-->
   <div class="text">Air Jordan 1</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="slike/soln2.webp" height="900px" style="width:100%" "height:800px">
+  <img src="slike/soln2.webp"  height="800px" style="width:100%">
   <div class="text">Nike Cosmics</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="slike/soln3.jpg" height="900px" style="width:100%">
+  <img src="slike/soln3.jpg"  height="800px" style="width:100%">
   <div class="text">Nike Air Yeezy 2</div>
 </div>
 
@@ -310,7 +192,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 4000); // Change image every 4 seconds
+  setTimeout(showSlides, 3000); // Change image every 3 seconds
 }
 </script>
 </body>
