--- a/nike/Nike.html
+++ b/nike/Nike.html
@@ -38,7 +38,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="slike/soln2.webp"  height="800px" style="width:100%">
+  <img src="slike/soln4.jpg"  height="800px" style="width:100%">
   <div class="text">Nike Cosmics</div>
 </div>
 
